# longan_nano_rust_template

./: .gitignore  Cargo.toml  README.md  build.sh
src/: main.rs
