[package]
name = "longan_nano_rust_template"
version = "0.1.0"
edition = "2021"

[dependencies]
gd32vf103xx-hal = "0.5.0"
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.6"

[dependencies.longan-nano]
version = "0.3.0"
features = ["lcd"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
